--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Behavior Clip</title>
+    <link rel="apple-touch-icon" href="/images/apple-touch.png" />
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
