altering css for a better mobile experience

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Behavior Clip</title>
-    <link rel="apple-touch-icon" href="/images/apple-touch.png" />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="./images/apple-touch.png" />
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <div class="main">
         <h1>Behavior Clip</h1>
-        <div id="pink"></div>
-        <div id="purple"></div>
-        <div id="blue"></div>
-        <div id="green"></div>
-        <div id="yellow"></div>
-        <div id="orange"></div>
-        <div id="red"></div>
+        <div class="color" id="pink"></div>
+        <div class="color" id="purple"></div>
+        <div class="color" id="blue"></div>
+        <div class="color" id="green"></div>
+        <div class="color" id="yellow"></div>
+        <div class="color" id="orange"></div>
+        <div class="color" id="red"></div>
     </div>
     <script src="main.js"></script>
 </body>
